<resources>
    <string name="app_name">Zoovie Clubs</string>
    <string name="are_you_new_host">Are you new Host ?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_details_to_continue">Enter your details to continue</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="term_and_condition">By clicking Sign Up above, you are agreeing to our Terms and conditions.</string>
    <string name="already_a_member">Already a Member ? </string>
    <string name="login_here">LOGIN HERE</string>
    <string name="login">Login</string>
    <string name="email_or_username">Email / Username</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="new_user">New User ? </string>
    <string name="sign_up_here">SIGN UP HERE</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="please_enter_the_otp_send_to">Please enter the OTP send to </string>
    <string name="next">next</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="zoovie">ZOOVIE</string>
    <string name="connect">Connect</string>
    <string name="username">Username</string>
    <string name="my_profile">My Profile</string>
    <string name="other_profile">Other Profile</string>
    <string name="hostS_timeline">HOSTS TIMELINE</string>
    <string name="exclusive_events">EXCLUSIVE EVENTS</string>
    <string name="exclusive_event_caps">EXCLUSIVE EVENT</string>
    <string name="limited_slots">Limited Slots</string>
    <string name="about">About</string>
    <string name="dummy_text">Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled with Dummy text is text that is used in the publishing industry or by web designers to occupy the space which will later be filled. </string>
    <string name="tickets">Tickets</string>
    <string name="ticket_caps">TICKETS</string>
    <string name="messages_caps">MESSAGES</string>
    <string name="notification_caps">NOTIFICATIONS</string>
    <string name="profile_name">Charlotte Bass</string>
    <string name="like">43 likes</string>
    <string name="comments">4 Comments</string>
    <string name="tab_to_allow_notifications">Tab to allow Notification</string>
    <string name="highlights">Highlights</string>
    <string name="connections">Connections</string>
    <string name="see_all">See all</string>
    <string name="check_availability">CHECK AVAILABILITY</string>
    <string name="availability_caps">AVAILABILITY</string>
    <string name="events_caps">EVENTS</string>
    <string name="view_all">View All</string>
    <string name="visited_places">VISITED PLACES</string>
    <string name="comment">COMMENTS</string>
    <string name="select_type">Select Type</string>
    <string name="order_now">Order Now</string>
    <string name="table_service">Table Service</string>
    <string name="vip_tickets">VIP Tickets</string>
    <string name="general_tickets">General Tickets</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank You</string>
    <string name="your_order_is_successfully_done">Your order is successfully done</string>
    <string name="your_qr_code">Your QR Code</string>
    <string name="go_to_home_page">Go to Home Page</string>
    <string name="cancel_caps">CANCEL</string>
    <string name="settings_caps">SETTINGS</string>
    <string name="edit_profile_caps">UPDATE PROFILE</string>
    <string name="message_caps">MESSAGES</string>
    <string name="no_of_bottles">Number of bottle</string>
    <string name="no_of_table">Number of table</string>
    <string name="view_profile">View Profile</string>
    <string name="connect_to_venue_caps">CONNECT TO VENUES</string>
    <string name="no_connect_yet">No connect yet</string>
    <string name="my_availability_caps">MY AVAILABILITY</string>
    <string name="progress_caps">PROGRESS</string>
    <string name="connections_caps">CONNECTIONS</string>
    <string name="continue_caps">CONTINUE</string>
    <string name="view_transaction_history"><u>view transaction history</u></string>
    <string name="earnings">Earnings</string>
    <string name="payout">Pay out</string>
    <string name="payout_caps">PAYOUT</string>
    <string name="transaction_history_caps">TRANSACTION HISTORY</string>
    <string name="earned">Earned</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="month_year">MM/YYYY</string>
    <string name="remove">Remove</string>
    <string name="schedule_manage_caps">SCHEDULE MANAGE</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>


    <string name="what_zoovie">What the Zoovie is ?</string>
    <string name="where_zoovie">Where the zoovie ?</string>
    <string name="when_zoovie">When the zoovie ?</string>
    <string name="who_zoovie">Who the zoovie ?</string>

    <string name="average_answer">Average answer.</string>
    <string name="hosted_by">Hosted By</string>
    <string name="suggestion_for_you">Suggestion for you</string>
    <string name="review">Review</string>
    <string name="tickets_and_tables"><![CDATA[Tickets & tables]]></string>
    <string name="str_upcoming_event">Upcoming Events</string>
    <string name="str_past_event">Past Events</string>
    <string name="str_hours">Hours</string>
    <string name="str_open">Open</string>
</resources>