<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@drawable/background_register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/logo_icon"
                android:layout_gravity="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/black"
                android:text="@string/login" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_details_to_continue"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:textSize="@dimen/_12ssp"/>



            <!--            username layout-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                app:boxBackgroundMode="none"
                app:hintAnimationEnabled="false"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_background"
                app:hintEnabled="false"
                app:boxBackgroundColor="@color/white"
                tools:ignore="RtlSymmetry">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/email_or_username"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHint="@color/et_text_hint_color"
                    android:textSize="@dimen/_12ssp" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--            password layout-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_38sdp"
                app:boxBackgroundMode="none"
                app:hintAnimationEnabled="false"
                android:layout_marginTop="@dimen/_10sdp"
                android:background="@drawable/edit_text_background"
                app:hintEnabled="false"
                app:boxBackgroundColor="@color/white"
                tools:ignore="RtlSymmetry">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/et_text_hint_color"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/_12ssp" />

                <FrameLayout
                    android:id="@+id/fragment_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

<!--            forgot password text view-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/forgot_password"
                android:layout_marginTop="@dimen/_10sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="@dimen/_13ssp"/>

            <!--            login button-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_38sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/rectangular_10_solid"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/_12sdp" />



            <!--new user? signup herelayout-->
            <LinearLayout
                android:id="@+id/ll_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_40sdp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_user"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_here"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:fontFamily="@font/poppins_semibold"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!--    back arrow imageview-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:tint="@color/black"
        android:layout_margin="@dimen/_16sdp"/>

</RelativeLayout>