<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_register"
    tools:context=".Hosts.Activity.HostOTPActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:src="@drawable/logo_icon"
                android:layout_gravity="center_horizontal"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/_18ssp"
                android:textColor="@color/black"
                android:text="@string/enter_otp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_the_otp_send_to"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_13ssp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="09425567554"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_13ssp"/>

            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/otp_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                app:height="40dp"
                app:width="40dp"
                app:bar_enabled="true"
                app:bar_height="2dp"
                app:length="4"
                app:otp=""
                app:otp_text_size="@dimen/_20ssp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_12ssp"/>

            <!--            next button-->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_38sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/rectangular_10_solid"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginBottom="@dimen/_12sdp" />

        </LinearLayout>
    </ScrollView>

    <!--    back arrow imageview-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:tint="@color/black"
        android:padding="@dimen/_16sdp"/>


</RelativeLayout>