<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".Hosts.Fragment.HostProgressFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_host_earnings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/earnings"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/et_text_hint_color"
        android:layout_margin="@dimen/_12sdp"
        android:layout_alignParentStart="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_host_payout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/payout"
        android:textColor="@color/et_text_hint_color"
        android:textSize="@dimen/_14ssp"
        android:layout_margin="@dimen/_12sdp"/>

    <!--   earning layout-->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_host_earnings"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp">
        <LinearLayout
            android:id="@+id/rl_table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:src="@drawable/ic_dollar"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_12sdp">
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$ 9000.69"
                    android:fontFamily="@font/poppins_semibold"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/_18ssp"
                    android:textColor="@color/black"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_view_transaction_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/view_transaction_history"
                    android:fontFamily="@font/poppins_medium"
                    android:textColor="@color/et_text_hint_color"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>